--- a/app/config/database.ci.yml
+++ b/app/config/database.ci.yml
@@ -4,6 +4,8 @@ default: &default
   pool: 5
   username: docker
   password: docker
+  host: localhost
+  port: 5432
 
 development:
   <<: *default
