--- a/app/Gemfile
+++ b/app/Gemfile
@@ -43,6 +43,7 @@ group :test, :development do
   gem 'mocha', require: false
   gem 'fabrication', require: false  
   gem 'simplecov', require: false
+  gem 'simplecov-rcov', require: false
   gem 'certified', require: false
   
   # test backend
