--- a/app/Gemfile
+++ b/app/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'rails', '4.1.5'
+gem 'rails', '4.1.6'
 gem 'pg'
 gem 'hiredis'
 gem 'redis', require: ['redis', 'redis/connection/hiredis']
@@ -11,10 +11,10 @@ gem 'redis-rails'
 # gem 'sinatra', require: nil
 
 # # ASSETS
-# gem 'sass-rails', '~> 4.0.3'
-# gem 'uglifier', '>= 1.3.0'
-# gem 'therubyracer', require: 'v8'
-# gem 'jquery-rails'
+gem 'sass-rails', '~> 4.0.3'
+gem 'uglifier', '>= 1.3.0'
+gem 'therubyracer', require: 'v8'
+gem 'jquery-rails'
 
 # BACKEND
 # gem 'sentry-raven'
@@ -26,6 +26,7 @@ gem 'versionist'
 gem 'ci_reporter_rspec'
 gem 'fast_xor'
 gem 'lru_redux'
+gem 'docker-api'
 
 
 # DEV & TEST
