--- a/config/database.ci.yml
+++ b/config/database.ci.yml
@@ -2,8 +2,8 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
-  username: docker
-  password: docker
+  username: postgres
+  password: postgres
   host: localhost
   port: 5432
 
