--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ cache: bundler
 bundler_args: --without development --deployment --retry=3 --jobs=3
 
 before_script:
-  - openssl aes-256-cbc -K $encrypted_eba33511580c_key -iv $encrypted_eba33511580c_iv -in deploy.pem.enc -out deploy.pem -d
+  - openssl aes-256-cbc -K $encrypted_eba33511580c_key -iv $encrypted_eba33511580c_iv -in .travis/deploy.pem.enc -out .travis/deploy.pem -d
   - cp config/database.ci.yml config/database.yml
   - psql -c 'create database mike_test;' -U postgres
   - bundle exec rake db:migrate
